--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   get: ^4.7.2
   get_storage: ^2.1.1
   dropdown_button2: ^2.3.9
+  file_picker: ^6.1.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
