--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,15 @@ dependencies:
   cloud_firestore: ^5.6.6
   dartz: ^0.10.1
   google_sign_in: ^6.2.2
-  sign_in_with_apple: ^6.1.4
+  sign_in_with_apple: ^7.0.1
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.17
   get: ^4.7.2
   get_storage: ^2.1.1
   dropdown_button2: ^2.3.9
-  file_picker: ^6.1.1
+  file_picker: ^10.2.0
   dotted_border: ^2.1.0
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   mockito: ^5.4.4
   build_runner: ^2.4.13
 
