--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   file_picker: ^10.2.0
   dotted_border: ^2.1.0
   share_plus: ^11.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
