--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
+  firebase_storage: ^12.4.10
   dartz: ^0.10.1
   google_sign_in: ^6.2.2
   sign_in_with_apple: ^7.0.1
