--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   dotted_border: ^2.1.0
   share_plus: ^11.0.0
   intl: ^0.20.2
+  http: ^1.5.0
+  cloudinary_api: ^1.1.1
+  cloudinary_url_gen: ^1.8.0
 
 dev_dependencies:
   flutter_test:
